--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <link rel="stylesheet" href="./style/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
      <nav>
         <h3 class="nav title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -22,6 +22,17 @@
             
         </ul>
      </nav>
+     <div class="banner">
+        <div>
+            <h3 class="banner-greeting">Hi, I am</h3>
+            <h1 class="banner-titel">Mary Hardy</h1>
+            <p>Shot what able cold new see.Friendly as an betrayed formerly he.Morning because as society behaved moments.</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+        
+        </div>
+        <img class="profile-pic" src="images/hardy.png" alt="">
+     </div>
     </header>
     <main>
 
