--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
             <h3 class="banner-greeting">Hi, I am</h3>
             <h1 class="banner-titel">Mary Hardy</h1>
-            <p>Shot what able cold new see.Friendly as an betrayed formerly he.Morning because as society behaved moments.</p>
+            <p class="banner-description">Shot what able cold new see.Friendly as an betrayed formerly he.Morning because as society behaved moments.</p>
             <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contact</button>
         
