--- a/index.html
+++ b/index.html
@@ -35,7 +35,36 @@
      </div>
     </header>
     <main>
+     <section class="about">
+       <h3 class="section-titel">About Me</h3>
+       <p class="section-description">I,m a designer & development with a passion for web design .      I enjoy developing simple, clean and slick
+        website that provide real value to the end user.
+        Thousands of clients have procured exceptional
+        resulfs while working with me Delivering world thin
+        time and budget which meets clients requiremant on mata.
+       </p>
+       <div class="about-info-container">
+        <div class="about-inf">
+            <h4 class="info-titel">Name:</h4>
+            <p class="info-description">Mary Hardy</p>
+        </div>
+        <div class="about-inf">
+            <h4 class="info-titel">Email</h4>
+            <p class="info-description">info@gmail.com</p>
+        </div>
+        <div class="about-inf">
+            <h4 class="info-titel">Date of birth:</h4>
+            <p class="info-description">11 November 1987</p>
+        </div>
+        <div class="about-inf">
+            <h4 class="info-titel">From:</h4>
+            <p class="info-description">Loc Angeles,USA</p>
+        </div>
 
+       </div>
+        </section>
+
+     </section>
     </main>
     <footer>
 
