--- a/index.html
+++ b/index.html
@@ -65,7 +65,43 @@
         </section>
 
      </section>
-    </main>
+  <!--what i do section start-->
+    <section>
+        <h3 class="section-titel">What I Do</h3>
+     <p id="what-I-do-description"  class="section-description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab porro exercitationem voluptatibus voluptates dolorem voluptatum a molestiae facilis. Incidunt error voluptas sequi nobis distinctio ad vel,
+         rem deserunt quaerat. Ex.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis impedit necessitatibus consequuntur voluptate quas doloremque rem ducimus dignissimos, eum sint est nisi fugiat? Exercitationem sint beatae, suscipit cupiditate
+       nisi quia!
+
+
+
+        </p>
+    <div class="sillk-container"></div>
+    <div class="skill">
+        <img src="./images/icons/js.png" alt="">
+        <h3-skill-titele>vanilla Javascript</h3-skill-titele>
+        <p-skill-description>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odit rerum ex adipisci amet, vero sunt, ut nemo doloremque deserunt rem necessitatibus voluptatem. Distinctio, earum veritatis? Nisi nihil nostrum quam!</p-skill-description>
+    </div>
+    <div class="skill">
+        <img src="./images/icons/react.png" alt="">
+        <h3-skill-titele>React</h3-skill-titele>
+        <p-skill-description>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est tenetur porro obcaecati quia vero, non enim optio, eveniet impedit odit tempora cupiditate. Quae, reiciendis! Inventore, saepe maxime. In, doloribus culpa.</p-skill-description>
+    </div>
+    <div class="skill">
+        <img src="images/icons/nodejs.png" alt="">
+        <h3-skill-titele>Nodes</h3-skill-titele>
+        <p-skill-description>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod distinctio reprehenderit commodi vero nihil. Mollitia beatae, esse cupiditate est illum facilis voluptates vel commodi cumque quae repellendus, laboriosam id amet.</p-skill-description>
+    </div>
+    <div class="skill">
+        <img src="./images/icons/mongo.png" alt="">
+        <h3-skill-titele>Mongo</h3-skill-titele>
+        <p-skill-description>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit possimus labore doloribus illo sequi corporis iste dignissimos harum a, eaque, deleniti qui deserunt, necessitatibus vero iusto ut enim adipisci. Aperiam!</p-skill-description>
+    </div>
+    
+    </section> 
+
+</main>   
     <footer>
 
     </footer>
